[package]
name = "mypipline"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
toml = "0.8.19"
serde = { version = "1.0.219", features = ["derive"]  }
mlua = { version = "0.11", features = ["lua54", "vendored"] }
common_rs = {git = "https://github.com/DevSanso/common_rs" , package = "common_rs", branch="master"}