[package]
name = "mypip_interpreter"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored"] }
pyo3 = { version = "0.27.2", features = ["extension-module"] }
curl = "0.4.49"
common_rs = {git = "https://github.com/DevSanso/common_rs", tag="v0.1.3"}
mypip_types = {path = "../types"}