[package]
name = "mypip_loader"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.219", features = ["derive"]  }
common_rs = {git = "https://github.com/DevSanso/common_rs", tag="v0.1.3"}
mypip_types = {path = "../types"}

[dev-dependencies]
mypip_loader = {path = "../loader"}
common_rs = {git = "https://github.com/DevSanso/common_rs" , tag="v0.1.3"}

[[test]]
name = "test_loader"
path = "tests/test_loader.rs"