[package]
name = "mypipline"
version = "0.1.0"
edition = "2021"

resolver = "2"

[[bin]]
name = "mypipline"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
toml = "0.8.19"
serde = { version = "1.0.219", features = ["derive"]  }
common_rs = {git = "https://github.com/DevSanso/common_rs" , package = "common_rs", branch="master"}
mypip_global = {path = "../global"}
mypip_types = {path = "../types"}
mypip_thread = {path = "../thread"}
mypip_loader = {path = "../loader"}
mypip_interpreter = {path = "../interpreter"}